--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -51,6 +51,10 @@ jobs:
             arch: 386
           - os: darwin
             arch: amd64
+          - os: freebsd
+            arch: 386
+          - os: freebsd
+            arch: amd64
           - os: windows
             arch: 386
             extension: '.exe'
