--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -8,15 +8,49 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go_version: [ '1.12', '1.13', '1.14' ]
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go_version }}
+          go-version: 1.14
+
       - run: go get -t -v ./...
+      - run: go test -v -race ./...
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Get the version
+      id: get_version
+      run: echo ::set-output name=TAG_NAME::${GITHUB_REF/refs\/tags\//}
+
+    - name: Build and push docker image
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
+        push: true
+        tags: ebrianne/adguard-exporter:${{ steps.get_version.outputs.TAG_NAME }}
 
   release:
     runs-on: ubuntu-latest
@@ -47,6 +81,8 @@ jobs:
             arch: amd64
           - os: linux
             arch: arm
+          - os: linux
+            arch: arm64
           - os: darwin
             arch: 386
           - os: darwin
@@ -62,7 +98,9 @@ jobs:
             arch: amd64
             extension: '.exe'
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+      
       - uses: actions/setup-go@v2
         with:
           go-version: 1.14
@@ -70,12 +108,20 @@ jobs:
       - name: Download go dependencies
         run: go get -t -v ./...
 
-      - name: Install mitchellh/gox to create platform specific releases
-        run: go install github.com/mitchellh/gox
+      - name: Install the needed vendors
+        run: GO111MODULE=on go mod vendor
 
-      - name: Create release
-        run: gox -ldflags "-s -w" -os="${{ matrix.os }}" -arch="${{ matrix.arch }}" -output="adguard_exporter-{{.OS}}-{{.Arch}}"  -verbose ./...
+      - name: Create release (${{ matrix.os }}-${{ matrix.arch }})
+        run: CGO_ENABLED=0 GOOS=${{ matrix.os }} GOARCH=${{ matrix.arch }} go build -a -ldflags '-s -w' -o adguard_exporter-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.extension }} ./
 
+      - if: matrix.os != 'freebsd'
+        name: Run UPX (${{ matrix.os }}-${{ matrix.arch }})
+        uses: crazy-max/ghaction-upx@v1
+        with:
+          version: latest
+          file: ./adguard_exporter-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.extension }}
+          args: -fq --brute
+      
       - name: Upload release assets
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
