--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,34 @@ on:
       - 'master'
   pull_request:
     branches:
-      - 'master'
+      - '*'
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      go: ${{ steps.filter.outputs.go }}
+      charts: ${{ steps.filter.outputs.charts }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          filters: |
+            go:
+              - '**/*.go'
+              - 'go.mod'
+              - 'go.sum'
+
   test:
     runs-on: ubuntu-latest
+    needs: changes
+    if: |
+      (needs.changes.outputs.go == 'true')
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -27,8 +50,9 @@ jobs:
 
   build-docker:
     runs-on: ubuntu-latest
-    needs: test
- 
+    needs: [changes,test]
+    if: |
+      (needs.changes.outputs.go == 'true')
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -57,7 +81,9 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [changes,test]
+    if: |
+      (needs.changes.outputs.go == 'true')
     strategy:
       matrix:
         include:
